test/tests/stages/18_structures/invalid_types/extra_credit/other_features/bitwise_op_structure.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[35]:
  struct
  identifier(s)
  {
  int
  identifier(i)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(x)
  =
  {
  const int(100)
  }
  ;
  int
  identifier(i)
  =
  const int(1000)
  ;
  identifier(x)
  &
  identifier(i)
  ;
  return
  const int(0)
  ;
  }
